Archive2/ff/741b162816b446/output
main.cpp: In function 'void test_selection(I, I)':
main.cpp:94:34: warning: use of 'auto' in lambda parameter declaration only available with -std=c++1y or -std=gnu++1y
     std::for_each(first, last, [](auto t) {                                 \
                                  ^
main.cpp:101:1: note: in expansion of macro 'TEST_ALGORITHM'
 TEST_ALGORITHM(selection)
 ^
main.cpp: In function 'void test_insertion(I, I)':
main.cpp:94:34: warning: use of 'auto' in lambda parameter declaration only available with -std=c++1y or -std=gnu++1y
     std::for_each(first, last, [](auto t) {                                 \
                                  ^
main.cpp:102:1: note: in expansion of macro 'TEST_ALGORITHM'
 TEST_ALGORITHM(insertion)
 ^
main.cpp: In function 'void test_quick(I, I)':
main.cpp:94:34: warning: use of 'auto' in lambda parameter declaration only available with -std=c++1y or -std=gnu++1y
     std::for_each(first, last, [](auto t) {                                 \
                                  ^
main.cpp:103:1: note: in expansion of macro 'TEST_ALGORITHM'
 TEST_ALGORITHM(quick)
 ^
main.cpp: In function 'void test_merge(I, I)':
main.cpp:94:34: warning: use of 'auto' in lambda parameter declaration only available with -std=c++1y or -std=gnu++1y
     std::for_each(first, last, [](auto t) {                                 \
                                  ^
main.cpp:104:1: note: in expansion of macro 'TEST_ALGORITHM'
 TEST_ALGORITHM(merge)
 ^
main.cpp: In function 'void test_heap(I, I)':
main.cpp:94:34: warning: use of 'auto' in lambda parameter declaration only available with -std=c++1y or -std=gnu++1y
     std::for_each(first, last, [](auto t) {                                 \
                                  ^
main.cpp:105:1: note: in expansion of macro 'TEST_ALGORITHM'
 TEST_ALGORITHM(heap)
 ^
In file included from /usr/local/include/c++/4.9.0/algorithm:62:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_algo.h: In instantiation of '_Funct std::for_each(_IIter, _IIter, _Funct) [with _IIter = std::vector<int>*; _Funct = test_selection(I, I) [with I = std::vector<int>*]::<lambda(auto:1)>]':
main.cpp:101:1:   required from 'void test_selection(I, I) [with I = std::vector<int>*]'
main.cpp:117:46:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algo.h:3755:14: error: invalid use of 'auto'
  __f(*__first);
              ^
/usr/local/include/c++/4.9.0/bits/stl_algo.h: In instantiation of '_Funct std::for_each(_IIter, _IIter, _Funct) [with _IIter = std::vector<int>*; _Funct = test_insertion(I, I) [with I = std::vector<int>*]::<lambda(auto:2)>]':
main.cpp:102:1:   required from 'void test_insertion(I, I) [with I = std::vector<int>*]'
main.cpp:118:46:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algo.h:3755:14: error: invalid use of 'auto'
/usr/local/include/c++/4.9.0/bits/stl_algo.h: In instantiation of '_Funct std::for_each(_IIter, _IIter, _Funct) [with _IIter = std::vector<int>*; _Funct = test_quick(I, I) [with I = std::vector<int>*]::<lambda(auto:3)>]':
main.cpp:103:1:   required from 'void test_quick(I, I) [with I = std::vector<int>*]'
main.cpp:119:42:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algo.h:3755:14: error: invalid use of 'auto'
/usr/local/include/c++/4.9.0/bits/stl_algo.h: In instantiation of '_Funct std::for_each(_IIter, _IIter, _Funct) [with _IIter = std::vector<int>*; _Funct = test_merge(I, I) [with I = std::vector<int>*]::<lambda(auto:4)>]':
main.cpp:104:1:   required from 'void test_merge(I, I) [with I = std::vector<int>*]'
main.cpp:120:42:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algo.h:3755:14: error: invalid use of 'auto'
/usr/local/include/c++/4.9.0/bits/stl_algo.h: In instantiation of '_Funct std::for_each(_IIter, _IIter, _Funct) [with _IIter = std::vector<int>*; _Funct = test_heap(I, I) [with I = std::vector<int>*]::<lambda(auto:5)>]':
main.cpp:105:1:   required from 'void test_heap(I, I) [with I = std::vector<int>*]'
main.cpp:121:41:   required from here
/usr/local/include/c++/4.9.0/bits/stl_algo.h:3755:14: error: invalid use of 'auto'
